--- a/client/views/application/layout.html
+++ b/client/views/application/layout.html
@@ -2,7 +2,7 @@
   <div class="container">
     <header class="navbar">
       <div class="navbar-inner">
-        <a class="brand" href="/">EGram</a>
+        <a class="brand" href="/">ComiChat</a>
       </div>
     </header>
     <div id="main" class="row-fluid">
