--- a/packages/comic/comic.css
+++ b/packages/comic/comic.css
@@ -11,3 +11,13 @@
 	border: 1px solid black;
 	border-radius: 5px;
 }
+
+.nextButton {
+	background-color: green;
+	color: white;
+	font-size: 25px;
+	padding: 12px;
+	border-radius: 5px;
+	line-height: 50px;	
+}
+
