--- a/packages/comic/comic.css
+++ b/packages/comic/comic.css
@@ -2,14 +2,14 @@
 	background-color: black;
 	color: white;
 	font-size: 5vw;;
-	padding: 12px;
-	border-radius: 5px;
-	line-height: 50px;
+	padding: 2vw;
+	border-radius: 1vw;
+	line-height: 5vw;
 	z-index: 20;
 }
 
 .bubble {
-	border: 2px solid black;
+	border: 1vw solid black;
 	border-radius: 4vw;
 	font-size: 5vw;
 	line-height: 8vw;
@@ -18,7 +18,6 @@
 }
 
 .nextButton {
-	background-color: #8F8;
 	color: black;
 	border-radius: 2vw;
 	font-size: 5vw;
